Rendertest: prepare canvas test.

--- a/test/RenderTests/CMakeLists.txt
+++ b/test/RenderTests/CMakeLists.txt
@@ -11,6 +11,7 @@ SET ( rendertest_src
     src/AbstractTestFixure.h
     src/AbstractRenderTest.cpp
     src/AbstractRenderTest.h
+    src/CanvasRenderTest.cpp
     src/RenderTestSuite.cpp
     src/PrimTypeRenderTest.cpp
     src/BaseTriangleRenderTest.cpp
