UI: add a new sample.

--- a/samples/CMakeLists.txt
+++ b/samples/CMakeLists.txt
@@ -14,7 +14,12 @@ SET ( 00_helloworld_src
 
 SET ( 01_modelloading_src
     01_ModelLoading/ModelLoading.cpp
-	01_ModelLoading/README.md
+    01_ModelLoading/README.md
+)
+
+SET ( 02_uidemo_src
+    02_UIDemo/UIDemo.cpp
+    02_UIDemo/README.md
 )
 
 ADD_EXECUTABLE( HelloWorld
@@ -25,12 +30,19 @@ ADD_EXECUTABLE( ModelLoading
     ${01_modelloading_src}
 )
 
-link_directories( 
+ADD_EXECUTABLE( UIDemo
+    ${02_uidemo_src}
+)
+
+link_directories(
     ${CMAKE_CURRENT_SOURCE_DIR}/../../ThirdParty/glew/Debug
     ${CMAKE_CURRENT_SOURCE_DIR}/../../ThirdParty/glew/Release
 )
-target_link_libraries ( HelloWorld osre ) 
-target_link_libraries ( ModelLoading osre ) 
 
-set_target_properties(  HelloWorld PROPERTIES FOLDER Samples )
+target_link_libraries ( HelloWorld   osre )
+target_link_libraries ( ModelLoading osre ) 
+target_link_libraries ( UIDemo       osre )
+
+set_target_properties(  HelloWorld   PROPERTIES FOLDER Samples )
 set_target_properties(  ModelLoading PROPERTIES FOLDER Samples )
+set_target_properties(  UIDemo       PROPERTIES FOLDER Samples )
