--- a/test/UnitTests/CMakeLists.txt
+++ b/test/UnitTests/CMakeLists.txt
@@ -51,6 +51,7 @@ SET ( unittest_rb_src
 
 SET( unittest_ui_src
     src/UI/WidgetTest.cpp
+    src/UI/ButtonBaseTest.cpp
 )
 
 SET ( unittest_profiling_src
