UI: Add renderutil for UI rectangle rendering.

--- a/test/UnitTests/CMakeLists.txt
+++ b/test/UnitTests/CMakeLists.txt
@@ -52,6 +52,7 @@ SET ( unittest_rb_src
 SET( unittest_ui_src
     src/UI/WidgetTest.cpp
     src/UI/ButtonBaseTest.cpp
+    src/UI/StyleProviderTest.cpp
 )
 
 SET ( unittest_profiling_src
