--- a/test/UnitTests/CMakeLists.txt
+++ b/test/UnitTests/CMakeLists.txt
@@ -33,6 +33,10 @@ SET ( unittest_common_src
     src/Common/IdsTest.cpp
 )
 
+SET ( unittest_collision_src
+    src/Collision/TAABBTest.cpp
+)
+
 SET( unittest_io_src 
     src/IO/UriTest.cpp
 )
@@ -81,6 +85,7 @@ SET ( gtest_src
 
 SOURCE_GROUP( src\\App            FILES ${unittest_app_src} )
 SOURCE_GROUP( src\\Common         FILES ${unittest_common_src} )
+SOURCE_GROUP( src\\Collision      FILES ${unittest_collision_src})
 SOURCE_GROUP( src\\Assets         FILES ${unittest_assets_src} )
 SOURCE_GROUP( src\\IO             FILES ${unittest_io_src} )
 SOURCE_GROUP( src\\Math           FILES ${unittest_math_src} )
@@ -94,6 +99,7 @@ SOURCE_GROUP( src\\GTest          FILES ${gtest_src} )
 ADD_EXECUTABLE( osre_unittest
     ${unittest_app_src}
     ${unittest_common_src}
+    ${unittest_collision_src}
 	${unittest_assets_src}    
 	${unittest_io_src}
     ${unittest_math_src}
