--- a/3dparty/freetype/Makefile
+++ b/3dparty/freetype/Makefile
@@ -102,7 +102,7 @@ package/fast: package
 
 # Special rule for the target list_install_components
 list_install_components:
-	@$(CMAKE_COMMAND) -E cmake_echo_color --switch=$(COLOR) --cyan "Available install components are: \"Unspecified\" \"assimp-dev\" \"lib_ce2_infrastructure\" \"libassimp3.3.1-dev\""
+	@$(CMAKE_COMMAND) -E cmake_echo_color --switch=$(COLOR) --cyan "Available install components are: \"Unspecified\" \"assimp-bin\" \"assimp-dev\" \"lib_ce2_infrastructure\" \"libassimp3.3.1-dev\""
 .PHONY : list_install_components
 
 # Special rule for the target list_install_components
