Common: new operators.

--- a/3dparty/zlib/CMakeLists.txt
+++ b/3dparty/zlib/CMakeLists.txt
@@ -21,7 +21,7 @@ include(CheckCSourceCompiles)
 enable_testing()
 
 check_include_file(sys/types.h HAVE_SYS_TYPES_H)
-check_include_file(stdint.h HAVE_STDINT_H)
+#check_include_file(stdint.h HAVE_STDINT_H)
 check_include_file(stddef.h HAVE_STDDEF_H)
 
 #
